--- a/src/views/nuevaPersona.ejs
+++ b/src/views/nuevaPersona.ejs
@@ -19,6 +19,10 @@
             <label for="telephone" class="form-label">Telefono</label>
             <input type="number" name="telephone" class="form-control" id="telephone">
           </div>
+          <div class="mb-3">
+            <label for="task" class="form-label">Tarea</label>
+            <input type="text " name="tarea" class="form-control" id="task">
+          </div>
        
         
         
