--- a/src/views/common/header.ejs
+++ b/src/views/common/header.ejs
@@ -12,20 +12,25 @@
 <body>
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="../">B-ejercicio</a>
+        <a class="navbar-brand" href="http://localhost:3000/">B-ejercicio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/personas/">personas</a>
+                    <a class="nav-link " aria-current="page" href="/personas/">personas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tareas/">Tareas</a>
+                    <a class="nav-link " href="/tareas/">Tareas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/asignaciones">Asignaciones</a>
+                    
+                    <a class="nav-link " href="/asignaciones/personas/">Asignaciones personas</a>
+                </li>
+                <li class="nav-item">
+                    
+                    <a class="nav-link " href="/asignaciones/tareas/">Asignaciones tareas</a>
                 </li>
                 
             </ul>
