--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,14 +9,17 @@
     </div>
 
     <div class="row">
-        <div class="col-4">
-            <a href="./personas/"> <img src="/assets/personas.png" class="img-fluid" alt="personas"></a>
+        <div class="col-3 text-center">
+            <a href="./personas/"> <img src="/assets/personas.png" class="img-fluid" alt="personas">personas</a>
         </div>
-        <div class="col-4">
-            <a href="./tareas/"> <img src="/assets/tareas.png" class="img-fluid" alt="personas"></a>
+        <div class="col-3 text-center">
+            <a href="./tareas/"> <img src="/assets/tareas.png" class="img-fluid" alt="tareas">tareas</a>
         </div>
-        <div class="col-4">
-            <a href="./asignacion/"> <img src="/assets/Asignacion.png" class="img-fluid" alt="personas"></a>
+        <div class="col-3 text-center">
+            <a href="./asignaciones/personas/"> <img src="/assets/pt.png" class="img-fluid" alt="personas con tarea">asignaciones de tareas</a>
+        </div>
+        <div class="col-3 text-center">
+            <a href="./asignaciones/tareas/"> <img src="/assets/tp.png" class="img-fluid" alt="personas">asignaciones de tareas</a>
         </div>
     </div>
 
